--- a/src/components/Navber.css
+++ b/src/components/Navber.css
@@ -1,7 +1,12 @@
 header{
-    max-width: 1600px;
-    margin: auto;
-    padding: 20px 20px;
+    nav{
+        max-width: 1600px;
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 20px 20px;
+    }
 }
 header .center li {
     transition: all 0.5s ease;
