--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,4 +1,6 @@
-
+footer{
+    margin-top: -80px;
+}
 footer  li {
     transition: all 0.5s ease;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
