--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer components {
+    .site-container{
+        @apply max-w-7xl mx-auto w-full 
+    }
+}
+.hover-shadow-box-animation {
+    display: inline-block;
+    vertical-align: middle;
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px transparent;
+    transition-duration: 0.6s;
+    transition-property: box-shadow, transform;
+  }
+  .hover-shadow-box-animation:hover,
+  .hover-shadow-box-animation:focus,
+  .hover-shadow-box-animation:active {
+    box-shadow: 1px 10px 10px -10px rgba(7, 7, 7, 0.5);
+    transform: scale(1.1);
+  } 
+
+main{
+  padding-left: 140px;
+}
